[Intermediate commit] Solve module read errors. testCodegenVajramImpl is not working as expected